fix(render): Fix onload flickering and stylable optimization issues (#251)
* Fix Stylable optimizer
* Use Local fonts

--- a/src/theme/common/globals.st.css
+++ b/src/theme/common/globals.st.css
@@ -33,8 +33,3 @@
 	background: none;
 	font-family: inherit;
 }
-
-:global(input),
-:global(textarea) {
-	font-family: inherit;
-}
